--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: DSA SMC
+title: DSC SMC
 author:
   name: Democratic Socialist Club of Santa Monica College
   email: smcydsa@gmail.com
